Fix icon visibility in light mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2092,7 +2092,7 @@ button,
   #header .icons {
     text-align: right; }
   #header .icons a {
-    color: #ffffff;
+    color: #3d4449;
   }
   #header .icons a:hover {
     color: #00aeef;
